--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <header id="main">
-    <nav>
-        <ul>
-            <li id="o-nas">o nas</li>
-            <p class="tekst"></p>
-            <li id="kontakt">kontakt</li>
-        </ul>
-    </nav>
-    </header>
-    <footer id="footer"></footer>
+<nav>
+    <ul>
+        <li>main</li>
+        <li>o nas</li>
+        <li>kontakt</li>
+        <li>footer</li>
+    </ul>
+</nav>
+
+<header id="main"></header>
+
+    <section id="o-nas">
+        <p class="tekst"></p>
+    </section>
+
+    <section id="kontakt"></section>
+
+<footer id="footer"></footer>
     
 </body>
 </html>
